fix ul type html page

--- a/liste.html
+++ b/liste.html
@@ -53,7 +53,7 @@
 	<li> economie </li>
 	<li> informatique </li>
 </ol>
-<<ol type="a">
+<ol type="A">
 	<li> espanol</li>
 	<li> economie </li>
 	<li> informatique </li>
