add section hello fivepoints

--- a/liste.html
+++ b/liste.html
@@ -6,17 +6,16 @@
 	<title>liste et puce html </title>
 </head>
 <body>
-<ul list-style-image:url('lamia.jpg') >
+
+	<h1>Hello Five Points</h1>
+
+<ul list-style-image:url('imh.jpg') >
 <li> mohamed ben rajab</li>
 <li> safa14@hotmail.fr</li>
 <li> lamia </li>	
 </ul>
 
-  <ul style="list-style: circle;">
-	<li> francais </li>
-	<li> angalis </li>
-	<li> math</li>
-</ul>
+ 
 
 <ul style="list-style: disc;">
 	<li>francais </li>
@@ -53,7 +52,7 @@
 	<li> economie </li>
 	<li> informatique </li>
 </ol>
-<ol type="A">
+<ol type="A">''
 	<li> espanol</li>
 	<li> economie </li>
 	<li> informatique </li>
